--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,5 +1,5 @@
 CXX				= c++
-CXXFLAGS		= -Wall -Wextra -Werror -std=c++98 #-fsanitize=address
+CXXFLAGS		= -Wall -Wextra -Werror -std=c++98 -fsanitize=address
 RM				= rm -fr
 INC				= BitcoinExchange.hpp
 NAME			= btc
